--- a/resources/messages_pt_BR.properties
+++ b/resources/messages_pt_BR.properties
@@ -11,3 +11,6 @@ difficulty_0=F\u00e1cil
 difficulty_1=Moderado
 difficulty_2=Dif\u00edcil
 difficulty_3=Muito Dif\u00edcil
+language_pt=Portugu\u00eas
+language_en=Ingl\u00eas
+language_es=Espanhol
