A alteração de língua está funcionando, com um porém
Caso tenha um jogo começado, você automaticamente abandona um jogo só de
abrir a tela de trocar de idioma. TODO: Corrigir isso

Talvez também seja bom mudar de radiobutton para algum outro elemento de
interface, para que seja possível adicionar novas linguagens sem
modificar elementos de interface

--- a/resources/messages_en_US.properties
+++ b/resources/messages_en_US.properties
@@ -5,7 +5,7 @@ help=Help
 about=About JMinas
 statitics=Statistics
 exit=Exit
-change_language="Change language"
+change_language=Change language
 difficulty=Difficulty
 difficulty_0=Easy
 difficulty_1=Moderate
