--- a/resources/messages_pt_BR.properties
+++ b/resources/messages_pt_BR.properties
@@ -5,7 +5,7 @@ help=Ajuda
 about=Sobre o JMinas
 statitics=Estat\u00edsticas
 exit=Sair do jogo
-change_language="Alterar idioma"
+change_language=Alterar idioma
 difficulty=Dificuldade
 difficulty_0=F\u00e1cil
 difficulty_1=Moderado
