--- a/resources/messages_pt_BR.properties
+++ b/resources/messages_pt_BR.properties
@@ -14,3 +14,6 @@ difficulty_3=Muito Dif\u00edcil
 language_pt=Portugu\u00eas
 language_en=Ingl\u00eas
 language_es=Espanhol
+about_jminas=JMinas: Um simples jogo de campo minado feito em Java
+about_original_author=Autor original: Darth Leonard (leolinuxmx@gmail.com)
+about_authors="Desenvolvido por: Luciano, Maikon, and Tiago"
