--- a/resources/messages_en_US.properties
+++ b/resources/messages_en_US.properties
@@ -14,3 +14,6 @@ difficulty_3=Very Hard
 language_pt=Portuguese
 language_en=English
 language_es=Spanish
+about_jminas=JMinas: A simple minefield game built using Java
+about_original_author=Original author: Darth Leonard (leolinuxmx@gmail.com)
+about_authors="Developed by: Luciano, Maikon, and Tiago"
