--- a/resources/messages_es_ES.properties
+++ b/resources/messages_es_ES.properties
@@ -1,19 +1,18 @@
-game_name=JMinas
 options=Opciones
 new_game=Nuevo Juego
 help=Ayuda
 about=Acerca de JMinas
-statistics=Estad\u00c3\u00adsticas
+statistics=Estad\u00edsticas
 exit=Salir
 change_language=Cambiar idioma
 difficulty=Dificultad
-difficulty_0=F\u00c3\u00a1cil
+difficulty_0=F\u00e1cil
 difficulty_1=Moderado
-difficulty_2=Dif\u00c3\u00adcil
-difficulty_3=Muy Dif\u00c3\u00adcil
-language_pt=Portugu\u00c3\u00a9s
-language_en=Ingl\u00c3\u00a9s
-language_es=Espa\u00c3\u00b1ol
+difficulty_2=Dif\u00edcil
+difficulty_3=Muy Dif\u00edcil
+language_pt=Portugu\u00e9s
+language_en=Ingl\u00e9s
+language_es=Espa\u00f1ol
 about_jminas=JMinas: Un juego de campo minado simple construido con Java
 about_original_author=Autor original: Darth Leonard (leolinuxmx@gmail.com)
 about_authors=Desarrollado por: Luciano, Maikon y Tiago
