--- a/resources/messages_es_ES.properties
+++ b/resources/messages_es_ES.properties
@@ -16,3 +16,10 @@ language_es=Espa\u00f1ol
 about_jminas=JMinas: Un juego de campo minado simple construido con Java
 about_original_author=Autor original: Darth Leonard (leolinuxmx@gmail.com)
 about_authors=Desarrollado por: Luciano, Maikon y Tiago
+statistics_title=Estad\u00edsticas
+games_played=Partidas jugadas
+victories=Victorias
+lost_games=Partidas perdidas
+close=Cerrar
+won_message=\u00a1Felicitaciones! \u00a1Ganaste!
+lost_message=Perdiste
