--- a/resources/messages_pt_BR.properties
+++ b/resources/messages_pt_BR.properties
@@ -16,4 +16,11 @@ language_en=Ingl\u00eas
 language_es=Espanhol
 about_jminas=JMinas: Um simples jogo de campo minado feito em Java
 about_original_author=Autor original: Darth Leonard (leolinuxmx@gmail.com)
-about_authors="Desenvolvido por: Luciano, Maikon, and Tiago"
+about_authors=Desenvolvido por: Luciano, Maikon, and Tiago
+statistics_title=Estat\u00edsticas
+games_played=Partidas Jogadas
+victories=Vit\u00f3rias
+lost_games=Partidas Perdidas
+close=Fechar
+won_message=Parab\u00e9ns! Voc\u00ea venceu!
+lost_message=Voc\u00ea perdeu
