--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -5,7 +5,7 @@ help=Help
 about=About JMinas
 statitics=Statistics
 exit=Exit
-change_language="Change language"
+change_language=Change language
 difficulty=Difficulty
 difficulty_0=Easy
 difficulty_1=Moderate
@@ -16,4 +16,11 @@ language_en=English
 language_es=Spanish
 about_jminas=JMinas: A simple minefield game built using Java
 about_original_author=Original author: Darth Leonard (leolinuxmx@gmail.com)
-about_authors="Developed by: Luciano, Maikon, and Tiago"
+about_authors=Developed by: Luciano, Maikon, and Tiago
+statistics_title=Statistics
+games_played=Games Played
+victories=Victories
+lost_games=Lost Games
+close=Close
+won_message=Congratulations! You Win!
+lost_message=You lost
